2009-04-04 Harri Pitkänen <hatapitk@iki.fi>

	* Configure updates for libtool version 2.

2009-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC.
	* Disable character case checks if sentence contains a tab
	  character.
	* Disable checks for paragraphs that contain only an URL or
	  some other non-standard text.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Restore Windows support (partially).

2009-03-08 Harri Pitkänen <hatapitk@iki.fi>

	* Read replacement suggestions from data/autocorrect/fi_FI.xml.

2009-02-25 Harri Pitkänen <hatapitk@iki.fi>

	* Change struct gc_sentence into class Sentence.
	* Change struct gc_paragraph into class Paragraph.

2009-02-21 Harri Pitkänen <hatapitk@iki.fi>

	* Change struct gc_token into class Token.

2009-02-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add suggestions for some detected grammar errors.

2009-02-14 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for environment variable VOIKKO_DICTIONARY.
	* Do not try to check character case for sentences that have
	  been written fully in upper case.

2009-01-31 Harri Pitkänen <hatapitk@iki.fi>

	* Add option -d to all test tools.

2009-01-29 Harri Pitkänen <hatapitk@iki.fi>

	* Load dictionaries with the new dictionary loader.

2009-01-25 Harri Pitkänen <hatapitk@iki.fi>

	* Implement new functions for getting information about all
	  available dictionaries.

2009-01-15 Harri Pitkänen <hatapitk@iki.fi>

	* Print more informative error message from voikkospell and
	  voikkohyphenate if too long word is encountered.

2009-01-04 Harri Pitkänen <hatapitk@iki.fi>

	* Return char strings and string arrays allocated with
	  malloc() instead of new[]. This is needed to maintain
	  compatibility with some (broken) applications that were
	  written before libvoikko 1.5 and used free() to free these
	  structures. Theoretically the same should be done for
	  wchar_t interfaces, but since I know of no application that