@@ -87,6 +87,7 @@ void gc_paragraph_to_cache(int handle, const wchar_t * text, size_t textlen) {
 	for (int i = 0; i < para->sentenceCount; i++) {
 		AutoCorrect::autoCorrect(handle, para->sentences[i]);
 		gc_local_punctuation(handle, para->sentences[i]);
+		gc_punctuation_of_quotations(handle, para->sentences[i]);
 		gc_character_case(handle, para->sentences[i], i == 0);
 		gc_repeating_words(handle, para->sentences[i]);
 	}
@@ -126,10 +127,6 @@ voikko_gc_cache_entry * gc_new_cache_entry(int suggestions) {
 		e->error.suggestions = new char*[suggestions + 1];
 		for (int i = 0; i < suggestions + 1; i++) {
 			e->error.suggestions[i] = 0;
-		}
-		if (!e->error.suggestions) {
-			delete e;
-			return 0;
 		}
 	}
 	return e;
