@@ -28,6 +28,7 @@
 #define GCERR_WRITE_FIRST_UPPERCASE 7
 #define GCERR_REPEATING_WORD 8
 #define GCERR_TERMINATING_PUNCTUATION_MISSING 9
+#define GCERR_INVALID_PUNCTUATION_AT_END_OF_QUOTATION 10
 
 #include "voikko_defs.h"
 
