@@ -54,16 +54,17 @@ VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handl
 	size_t tokenlen;
 	size_t previous_token_start = 0;
 	voikko_token_type previous_token_type = TOKEN_NONE;
-	int end_found = 0;
-	int end_dotword = 0;
-	int possible_end_punctuation = 0;
+	bool end_found = false;
+	bool in_quotation = false;
+	bool end_dotword = false;
+	bool possible_end_punctuation = false;
 	while (token != TOKEN_NONE && textlen > slen) {
 		int ignore_dot_saved = voikko_options.ignore_dot;
 		voikko_options.ignore_dot = 0;
 		token = voikko_next_token_ucs4(handle, text + slen,
 		                               textlen - slen, &tokenlen);
 		voikko_options.ignore_dot = ignore_dot_saved;
-		if (end_found) {
+		if (end_found && !in_quotation) {
 			if (token != TOKEN_WHITESPACE) {
 				*sentencelen = slen;
 				if (end_dotword || possible_end_punctuation) return SENTENCE_POSSIBLE;
@@ -72,23 +73,37 @@ VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handl
 		}
 		else if (token == TOKEN_PUNCTUATION) {
 			wchar_t punct = text[slen];
-			if (wcschr(L"!?", punct)) end_found = 1;
+			if (wcschr(L"!?", punct)) {
+				end_found = true;
+				if (in_quotation) {
+					possible_end_punctuation = true;
+				}
+			}
 			else if (punct == L'.' && tokenlen == 3) {
-				end_found = 1;
-				possible_end_punctuation = 1;
+				end_found = true;
+				possible_end_punctuation = true;
 			}
 			else if (punct == L'.') {
-				end_found = 1;
+				end_found = true;
 				if (slen != 0 &&
 				    previous_token_type == TOKEN_WORD &&
 				    dot_part_of_word(text + previous_token_start,
 				      slen - previous_token_start + 1)) {
-					end_dotword = 1;
+					end_dotword = true;
 				}
 			}
 			else if (punct == L':') {
-				end_found = 1;
-				possible_end_punctuation = 1;
+				end_found = true;
+				possible_end_punctuation = true;
+			}
+			else if (punct == L'"') {
+				in_quotation = !in_quotation;
+				if (!in_quotation && slen + 1 < textlen && text[slen + 1] == L',') {
+					// Comma immediately after ending quote suggests that
+					// the sentence most likely did not end here.
+					end_found = false;
+					possible_end_punctuation = false;
+				}
 			}
 		}
 		previous_token_start = slen;
